# piper_control

./: .gitignore  CHANGELOG.md  README.md  conda_env.sh  piper_control.yaml  piper_control_env.yaml  pyproject.toml  tutorial.ipynb
scripts/: disable.py  get_joint_limits.py  go_zero.py  grav_comp.py  grav_comp_data_commanded.npz  grav_comp_viz.ipynb  log_grav_comp.py  mit_ctrl.py  read_joint_pos.py  set_as_leader.py  set_zero.py  simple_move.py  test_mit_control.py
scripts/og_data/: grav_comp_data.npz
src/piper_control/: joint_controller.py  piper_connect.py  piper_control.py  piper_interface.py
