[project]
name = "piper_control"
version = "0.1.0"
description = "A thin wrapper around piper_sdk for controlling AgileX Piper arms."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "piper_sdk>=0.2.19",
]

[project.urls]
Repository = "https://github.com/Reimagine-Robotics/piper_control"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
